src/main/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  rules:
  - host: webapprouting.kubernetes.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-application
            port:
              number: 80
